# curves3d

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/curves/: curves.h  point.h  vector3.h
src/: circle.cpp  ellipse.cpp  helix.cpp
tests/: test_circle.cpp  test_ellipse.cpp  test_helix.cpp
